footer wrap fixed

--- a/styles.css
+++ b/styles.css
@@ -1721,7 +1721,6 @@ footer {
   }
 
   .footer__columns {
-    flex-wrap: nowrap;
     justify-content: center;
   }
 
